* 2014-04-22 - thorben.betten@open-xchange.com

 - Fix for bug 32111: Added setParameter() method that is error aware & improved log output in case of an invalid Content-Type parameter
 - Fix for bug 31684: Prefer look-up by user identifier over look-up by object/folder identifier pair

* 2014-04-21 - thorben.betten@open-xchange.com

 - Fix for bug 32033: Escape user input that is supposed to be displayed as HTML
 - Fix for bug 32108: Ignore duplicate Ical attachment that is part of multipart/alternative

* 2014-04-17 - martin.schneider@open-xchange.com

 - Fix for bug 30914: Ignore dates for import that contain only zeros

* 2014-04-17 - tobias.friedrich@open-xchange.com

 - Fix for bug 32076: Process images of imported contacts in a serialized way  
 - Fix for bug 30835: Sort languages by name  

* 2014-04-15 - tobias.friedrich@open-xchange.com

 - Fix for bug 32060: Require valid module in autocomplete request 

* 2014-04-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 32004: Use default type for folders below infostore trash 

* 2014-04-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 31993: Don't rely on "day of year" comparison in leap years 

* 2014-04-10 - marc.arens@open-xchange.com

 - Fix for bug 31942: Fix for unconsumed request remainders and configure that we want to accept payloads for methods where a payload is
                      currently undefined but not forbidden.
 
* 2014-04-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 29950: Require "write own objects" permissions when creating files via WebDAV 

* 2014-04-10 - thorben.betten@open-xchange.com

 - Fix for bug 31828: Honor possible surrogate pairs when splitting a string during mail-safe conversion
 - Fix for bug 31987: Extended infostore document tables by the (`cid`, `file_md5sum`) index
 - Fix for bug 31826: Keep unicode representation for special HTML entities

* 2014-04-09 - marc.arens@open-xchange.com
